--- a/css/styles.css
+++ b/css/styles.css
@@ -1,35 +1,56 @@
 @font-face {
-    font-family: Roboto;
-    src: url(fonts/Roboto-Regular.ttf);
+    font-family: Lato-Regular;
+    src: url('../fonts/Lato-Regular.ttf');
 }
 
-*{
+* {
     font-size: 12pt;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     color: #222;
-    font-family: Roboto, sans-serif;
+    font-family: Lato-Regular, Verdana, sans-serif;
+    
 }
 
-#interface{
+#interface {
     display: block;
-    width: 100%;
-    padding: 2rem;
-    height: 100vh;
     width: 100vw;
-    background: #fafafa;
+    height: 100vh;
+    padding: 2rem;
+    background-color: #fafafa;
 }
 
-#interface .cabecalho{
+#interface .cabecalho {
     display: block;
     width: 70%;
-    margin: 0 auto;
+    margin: 0 auto 2rem auto; /*top, right, bottom, left*/
 }
 
-#interface .cabecalho h2{
+#interface .cabecalho h2 {
     display: block;
     text-align: center;
     text-transform: uppercase;
+    font-size: 1.5rem;
+}
+#interface main {
+    border: 1px solid yellow;
+}
+
+#interface table {
+    border: 1px solid black;
+}
+
+#interface table button {
+    display: block;
+    width: 50px;
+    height: 50px;
+    font-size: 1.5rem;
+}
+
+#interface table button#bt-acce {
+    font-size: .8rem;
+    font-weight: bold;
+    color: red;
 }
 
