--- a/css/styles.css
+++ b/css/styles.css
@@ -54,3 +54,14 @@
     color: red;
 }
 
+#interface table button#bt-acce{
+    font-size: .8rem;
+    font-weight: bold;
+    color: #7e0a0a;
+
+}
+
+#interface table #bt-plus,
+#interface table #bt-equal{
+    height: 100px;
+}
