--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@
 
 #interface table #painel{
     display: block;
-    background-color: #333;
+    background-color: #919191;
 }
 
 #interface table 
@@ -70,6 +70,7 @@
 
 #interface table
 #painel #txt_display{
+    width: 100%;
     background-color: transparent;
     border: 0
 }
