--- a/css/styles.css
+++ b/css/styles.css
@@ -10,13 +10,6 @@
     box-sizing: border-box;
     color: #222;
     font-family: Lato-Regular, Verdana, sans-serif;
-    
-}
-
-
-
-#painel *{
-    text-align: end;
 }
 
 #interface {
@@ -25,6 +18,7 @@
     height: 100vh;
     padding: 2rem;
     background-color: #fafafa;
+    overflow: hidden;
 }
 
 #interface .cabecalho {
@@ -39,46 +33,43 @@
     text-transform: uppercase;
     font-size: 1.5rem;
 }
-/*
 
 #interface main {
-    border: 1px solid yellow;
+    display: block;
 }
-    */
-
-
 
 #interface table {
-    /*border: 1px solid black;*/
     margin: 0 auto;
-    padding: .5rem;
+    margin-block-end: 5px;
     border-radius: .25rem;
-    border: 1px solid black;
-    background: #ccc;
-    box-shadow: 0 0 2px rgba(0, 0, 0, .4);
+    background-color: #ddd;
+    padding: .5rem;
+    box-shadow: 0 0 2px rgba( 0, 0, 0, .8);
 }
 
-#interface table #painel{
+#interface table #painel {
     display: block;
-    background-color: #919191;
+    padding: 5px;
+    margin-bottom: 5px;
+    background-color: #333;
+    border-radius: .25rem;
 }
 
-#interface table 
-#painel #txt_operadores{
+#interface table #painel #txt_operadores {
     display: block;
+    color: #fafafa;
+    text-align: right;
+
 }
 
-#interface table
-#painel #txt_display{
+#interface table #painel #txt_display {
+    display: block;
     width: 100%;
     background-color: transparent;
-    border: 0
-}
-
-#interface table
-#painel #txt_display:focus-visible{
-    outline: none;
-    background-color: transparent;
+    border: 0;
+    outline: none;    
+    color: #fafafa;
+    text-align: right;
 }
 
 #interface table button {
@@ -88,21 +79,24 @@
     font-size: 1.5rem;
 }
 
-#interface table button#bt-acce {
-    font-size: .8rem;
-    font-weight: bold;
-    color: red;
-}
-
-#interface table button#bt-acce{
+#interface table #bt-acce {
     font-size: .8rem;
     font-weight: bold;
     color: #7e0a0a;
-
 }
 
 #interface table #bt-plus,
-#interface table #bt-equal{
+#interface table #bt-equal {
     height: 102px;
 }
+
+#interface #painel {
+    text-align: right;
+    background-color: #c0c0c0;
+    display: block;
+    width: 100%;
+    font-size: 1.2rem;
+    color: #333;
+}
+ 
 
